# vim-nayvy

./: .gitignore  Makefile  README.md  test.sh  test_vader.sh  vader_test.sh  vader_test_nvim.sh  vader_test_vim.sh
doc/: vim-nayvy.txt
python3/: .gitignore  Makefile  mypy.ini  pydra_vim.py  pyproject.toml  setup.cfg
python3/nayvy/aop/: decorator.py
python3/nayvy/console/: cli.py
python3/nayvy/function/: arg.py  func.py
python3/nayvy/importing/: default_import_config.nayvy  fixer.py  import_config.py  import_statement.py  pyflakes.py  ruff.py  utils.py
python3/nayvy/projects/: __init__.py  path.py
python3/nayvy/testing/: autogen.py  path.py
python3/nayvy/utils/: colors.py  string_utils.py
python3/nayvy_vim_if/: __init__.py  config.py  importing.py  testing.py  ultisnips.py  utils.py
python3/pivmy/: __init__.py
python3/prussian/console/: cli.py
python3/prussian/importing/: import_config.py  utils.py
python3/prussian/projects/: path.py
python3/prussian/testing/: autogen.py  path.py
python3/prussian_vim_if/: importing.py  testing.py
python3/pydra/: console.py  pydra_vim.py
python3/pydra/console/: __init__.py  cli.py
python3/pydra/function/: arg.py
python3/pydra/importing/: fixer.py  flake8.py  import_config.py  import_sentence.py  import_statement.py  imprt.py  pyflakes.py  utils.py
python3/pydra/models/: arg.py  import.py  imprt.py
python3/pydra/modulelib/: module.py
python3/pydra/projects/: __init__.py  attrs.py  path.py  walker.py
python3/pydra/testing/: autogen.py  path.py
python3/pydra_vim/: __init__.py  importing.py  testing.py
python3/pydra_vim_if/: __init__.py  importing.py  testing.py
python3/tests/function/: test_arg.py  test_func.py
python3/tests/importing/: test_fixer.py  test_flake8.py  test_import_config.py  test_import_sentence.py  test_import_statement.py  test_pyflakes.py  test_ruff.py  test_utils.py
python3/tests/projects/: test_.py  test_attrs.py  test_path.py
python3/tests/projecys/: test_.py
(+59 files in other folders)
