[tool.poetry]
name = "nayvy"
version = "0.0.1"
description = "Enhancing python code editting environment"
authors = ["Hiroki Konishi <relastle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click-help-colors = "^0.7"
click = "^7.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
nayvy = 'nayvy.console:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
