[tool.poetry]
name = "nayvy"
version = "0.1.0"
description = "Enriching python coding."
authors = ["Hiroki Konishi <relastle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click-help-colors = "^0.7"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-html = "^2.0.1"
coverage = {extras = ["toml"], version = "^5.0.3"}

[tool.poetry.scripts]
nayvy = 'nayvy.console:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
