[tool.poetry]
name = "nayvy"
version = "0.1.3"
description = "Enriching python coding."
authors = ["Hiroki Konishi <relastle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click-help-colors = "^0.7"
click = "^7.1.1"

[tool.poetry.scripts]
nayvy = 'nayvy.console:main'

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-html = "^2.0.1"
coverage = {extras = ["toml"], version = "^5.0.3"}
vim-vint = "^0.3.21"
ruff = "^0.1.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
strict_optional = true
no_implicit_optional = true
show_error_context = true
show_column_numbers = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = false
